<resources>
    <string name="app_name" translatable="false">Digest</string>

    <string name="digest_title_1">What should be in the alarm suitcase</string>
    <string name="digest_title_2">What to take with you in the car at the time of evacuation</string>
    <string name="digest_title_3">What to do after a house collapse</string>

    <string name="search">Searching…</string>
    <string name="phone_dialog_title_1">SOS (single):</string>
    <string name="phone_dialog_title_2">Fire Department:</string>
    <string name="phone_dialog_title_3">Police (militia in some countries):</string>
    <string name="phone_dialog_title_4">Ambulance:</string>
    <string name="add_country_phone_book">+ Add Emergency Phones</string>
    <string name="dialog_phone_btn">Add to Home Screen</string>
    <string name="change_country">Change country</string>
    <string name="digest_title">Useful Articles</string>
    <string name="digest_phone_title">Emergency numbers</string>

    <string-array name="digest_desc_1">
        <item>Copies of important documents in waterproof packaging. Make copies of passports, driving licenses, documents proving your rights to real estate, car, etc. in advance. Documents must be laid in such a way that they can be easily obtained. It is advisable to put photos of relatives and friends with documents.</item>
        <item>Credit cards and cash. You should always have a supply of money.</item>
        <item>Duplicate house and car keys.</item>
        <item>Map of area and communicated to all family members for emergency contact and meeting point.</item>
        <item>Communication and information access devices. You can take an inexpensive mobile phone with a charger.</item>
        <item>A flashlight, or rather a few, with spare batteries and bulbs for it. Compass and watch, preferably waterproof.</item>
        <item>Multitool is a multifunctional tool. Usually it looks like folding pliers, in the handles of which additional tools are hidden (knife, awl, saw, screwdriver, scissors and much more).</item>
        <item>Knife and hatchet.</item>
        <item>Signal means (whistle, flare).</item>
        <item>120L garbage bags (approximately five pieces). They can replace the awning if cut.</item>
        <item>A roll of wide tape.</item>
        <item>Pack of 12 condoms without box, no lube or fragrance. It can come in handy in many situations.</item>
        <item>Synthetic cord with a diameter of 4–5 mm and a length of 20 m.</item>
        <item>Notepad and pencil.</item>
        <item>Thread and needles.</item>
        <item>First aid kit. The number of medicines should be calculated to help not only yourself, but also those around you: bandages, adhesive plaster, iodine, cotton wool, activated charcoal, antipyretics, drugs against allergies, diarrhea and intestinal infections, eye drops, antibiotics in powder.</item>
        <item>Medications you take on a regular basis for a week, including dosage and how to use it. Names and phone numbers of your doctors. Keep track of the expiration date of the medicines (when packing, enter the revision date of the medicines into the calendar).</item>
        <item>Clothes. Two sets of underwear. Two pairs of cotton socks. Spare pants, shirt or jacket, raincoat, knitted hat, mittens, scarf. Reliable and comfortable shoes.</item>
        <item>Mini tent, sleeping bag</item>
        <item>Hygiene supplies: toothbrush and paste, a small bar of soap, a towel (can be pressed), toilet paper, several packs of dry handkerchiefs, several regular handkerchiefs, wet wipes. Women - personal hygiene products. You can take a razor and a manicure set.</item>
        <item>Baby supplies</item>
        <item>Dishes: a cauldron, a flask, a spoon, a mug (preferably metal 0.5 l), a folding cup.</item>
        <item>Matches, lighter.</item>
        <item>Storage of food for several days. Everything that can be eaten without cooking and that takes up little space is stored for a long time. Drinking water for 1–2 days, which needs to be updated periodically. High-calorie sweets, such as chocolate bars and a handful of hard candy.</item>
        <item>From the products: two cans of good stew, biscuits, soup bags, canned meat or fish, any cereals, pasta, dry ready-to-cook vegetables.</item>
        <item>Vodka or rubbing alcohol.</item>
        <item>Family heirlooms and heirlooms, but only after the essentials.</item>
    </string-array>

    <string-array name="digest_desc_2">
        <item>Blanket, sleeping bag (for each) or mat.</item>
        <item>First aid kit.</item>
        <item>Water at the rate of 1–3 liters per person.</item>
        <item>Chargers for phones, including power banks and car power.</item>
        <item>Jack, wrench set, fire extinguisher, battery charging alligators, gloves, warning triangle, reflective vest.</item>
        <item>Fuel in a metal canister.</item>
        <item>Spare tire.</item>
        <item>Tourist shovel.</item>
        <item>Stock of antifreeze, engine lubricant, brake fluid.</item>
        <item>Tow rope.</item>
        <item>Car compressor</item>
    </string-array>

    <string name="digest_desc_3">
         1. Try to free your arms and legs.\n\n

         2. Assess your surroundings.\n\n

         3. Carefully disassemble the blockage, do not touch what everything rests on.\n\n

         4. If you are not confident in your abilities - call for help.\n\n

         5. If possible, call the phone, knock on the pipes.\n\n

         6. If possible, provide first aid.\n\n

         7. Try to cover yourself with something so as not to lose heat and wait for help.\n\n
     </string>
    <string-array name="country_names">
        <item> Austria </item>
        <item> Albania </item>
        <item> Andorra </item>
        <item> Australia </item>
        <item> Azerbaijan </item>
        <item> Argentina </item>
        <item> Armenia </item>
        <item> Afghanistan </item>
        <item> Belarus </item>
        <item> Belgium </item>
        <item> Bulgaria </item>
        <item> Bosnia and Herzegovina </item>
        <item> Brazil </item>
        <item> United Kingdom </item>
        <item> Hungary </item>
        <item> Venezuela </item>
        <item> Germany </item>
        <item> Georgia </item>
        <item> European Union </item>
        <item> Israel </item>
        <item> Iran </item>
        <item>Kazakhstan</item>
        <item> "Canada
 USA" </item>
        <item> Kyrgyzstan </item>
        <item> China </item>
        <item> DPRK </item>
        <item> Korea </item>
        <item> Latvia </item>
        <item> Lithuania </item>
        <item> Macedonia </item>
        <item> Moldova </item>
        <item> Mongolia </item>
        <item> Poland </item>
        <item> Pridnestrovian Moldavian Republic </item>
        <item>Russia</item>
        <item> Romania </item>
        <item> Serbia </item>
        <item> Singapore </item>
        <item> Slovakia </item>
        <item> Slovenia </item>
        <item> Tajikistan </item>
        <item> Turkmenistan </item>
        <item> Turkey </item>
        <item>Uzbekistan</item>
        <item>Ukraine</item>
        <item> Finland </item>
        <item> France </item>
        <item> Croatia </item>
        <item> Czech Republic </item>
        <item> Montenegro </item>
        <item> Switzerland </item>
        <item> Sweden </item>
        <item> Estonia </item>
        <item> Japan </item>
    </string-array>

    <string name="start_message">Hey! This app is designed to help anyone find the information they need in an emergency. The application is developed by one person and is completely free. Because of this, the collection of information for this application will not be carried out as quickly as we would like. So if you have any ideas or would like to help, I would really appreciate it.</string>
    <string name="contact_me">Contact me:</string>
    <string name="contact_supprt">Support:</string>

    <string-array name="country_phones">
        <item>	112	#	122	#	133	#	144	</item>
        <item>	112	#	128	#	129	#	127	</item>
        <item>	112	#	118	#	110	#	112	</item>
        <item>	000	#	000	#	000	#	000	</item>
        <item>	112	#	101	#	102	#	103	</item>
        <item>	112 , 911	#	112 , 911	#	112 , 911	#	112 , 911	</item>
        <item>	112 , 911	#	101	#	102	#	103	</item>
        <item>	-	#	119	#	119	#	119	</item>
        <item>	112	#	101	#	102	#	103	</item>
        <item>	112	#	100	#	101	#	100	</item>
        <item>	112	#	160	#	166	#	150	</item>
        <item>	112/911/08	#	123	#	122	#	124	</item>
        <item>	112 , 911	#	193	#	190	#	192	</item>
        <item>	112 , 999	#	112 , 999	#	112 , 999	#	112 , 999	</item>
        <item>	112	#	105	#	107	#	104	</item>
        <item>	112 , 911	#	112 , 911	#	112 , 911	#	112 , 911	</item>
        <item>	112	#	112	#	110	#	112	</item>
        <item>	112	#	111	#	121	#	113	</item>
        <item>	112	#	112	#	112	#	112	</item>
        <item>	112(GSM)	#	102	#	100	#	101	</item>
        <item>	110	#	125	#	110	#	115	</item>
        <item>	112	#	101	#	102	#	103	</item>
        <item>	911 , 112(GSM)	#	911 , 112(GSM)	#	911 , 112(GSM)	#	911 , 112(GSM)	</item>
        <item>	112 , 911	#	101	#	102	#	103	</item>
        <item>	112	#	119	#	110	#	120	</item>
        <item>	819 , 112(GSM)	#	819 , 112(GSM)	#	819 , 112(GSM)	#	819 , 112(GSM)	</item>
        <item>	112 , 801	#	119	#	112	#	119	</item>
        <item>	112	#	01 , 112(GSM)	#	02 , 110(GSM)	#	03 , 113(GSM)	</item>
        <item>	112	#	"01(TEO LT)
101(Omnitel)
011(Bitė/Tele2)"	#	"02(TEO LT)
102(Omnitel)
022(Bitė/Tele2)"	#	"03(TEO LT)
103(Omnitel)
033(Bitė/Tele2)"	</item>
        <item>	112	#	193	#	192	#	194	</item>
        <item>	112	#		#		#		</item>
        <item>	100	#	101	#	102	#	103	</item>
        <item>	112	#	998	#	997	#	999	</item>
        <item>	-	#	101	#	102	#	103	</item>
        <item>	112	#	101	#	102	#	103	</item>
        <item>	112	#	981	#	955	#	961	</item>
        <item>	112	#	193	#	192	#	194	</item>
        <item>	112	#	995	#	999	#	995	</item>
        <item>	112	#	150	#	158	#	155	</item>
        <item>	112	#	112	#	113	#	112	</item>
        <item>	112	#	101	#	102	#	103	</item>
        <item>	112	#	101	#	102	#	103	</item>
        <item>	112	#	112	#	112	#	112	</item>
        <item>	112*	#	101	#	102	#	103	</item>
        <item>	112	#	101	#	102	#	103	</item>
        <item>	112	#	112	#	112	#	112	</item>
        <item>	112	#	18	#	17	#	15	</item>
        <item>	112	#	193	#	192	#	194	</item>
        <item>	112	#	150	#	158	#	155	</item>
        <item>	112	#	123	#	122	#	124	</item>
        <item>	112	#	118	#	117	#	144	</item>
        <item>	112	#	112	#	112	#	112	</item>
        <item>	112	#	112	#	112	#	112	</item>
        <item>	-	#	119	#	110	#	119	</item>
    </string-array>

    <string name="instagram_url" translatable="false"><u>raisehumaneness</u></string>
    <string name="gmail_url" translatable="false"><u>raisehumaneness@gmail.com</u></string>
    <string name="patreon_url" translatable="false">Patreon: <u>raisehumaneness</u></string>

</resources>