<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/contact_title"
        style="@style/TitleDarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/contact_me"/>

    <ImageView
        android:id="@+id/contact_inst"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_instagram"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/contact_mail"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_gmail"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_inst"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/contact_supp"
        style="@style/TitleDarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contact_mail"
        android:layout_marginTop="20dp"
        android:text="@string/contact_supprt"/>

    <ImageView
        android:id="@+id/contact_patreon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_patreon"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_supp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/contact_inst_url"
        style="@style/TextDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instagram_url"
        app:layout_constraintStart_toEndOf="@+id/contact_inst"
        app:layout_constraintTop_toTopOf="@+id/contact_inst"
        app:layout_constraintBottom_toBottomOf="@+id/contact_inst"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"/>

    <TextView
        android:id="@+id/contact_mail_url"
        style="@style/TextDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmail_url"
        app:layout_constraintStart_toEndOf="@+id/contact_mail"
        app:layout_constraintTop_toTopOf="@+id/contact_mail"
        app:layout_constraintBottom_toBottomOf="@+id/contact_mail"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"/>

    <TextView
        android:id="@+id/contact_patreon_url"
        style="@style/TextDarkStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patreon_url"
        app:layout_constraintStart_toEndOf="@+id/contact_patreon"
        app:layout_constraintTop_toTopOf="@+id/contact_patreon"
        app:layout_constraintBottom_toBottomOf="@+id/contact_patreon"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>