<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/nav_country"
                style="@style/MainCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <TextView
                    style="@style/TextDarkStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/add_country_phone_book"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/country_view"
                style="@style/MainCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:visibility="gone">

                <include
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    layout="@layout/dialog_phone"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/digest_main"
                style="@style/MainCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        style="@style/TextDarkStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/digest_title"/>

                    <TextView
                        style="@style/TitleDarkStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=">"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/digest_phone_book"
                style="@style/MainCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        style="@style/TextDarkStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/digest_phone_title"/>

                    <TextView
                        style="@style/TitleDarkStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=">"
                        android:layout_marginEnd="10dp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</FrameLayout>